[package]
name = "orphic2"
version = "0.1.0"
edition = "2021"
authors = ["Shaun Porwal <your_email@example.com>"]
description = "A natural language interface for *nix systems. (Fork of Orphic)"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/shaunporwal/orphic2"
repository = "https://github.com/shaunporwal/orphic2"
keywords = ["cli", "ChatGPT", "LLM", "GPT", "AI"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.9.2"
tokio = { version = "1.25.0", features = ["full"] }
substring = "1.4.5"
serde_json = "1.0"
lazy_static = "1.4.0"
execute = "0.2.11"
clap = { version = "4.1.8", features = ["cargo"] }

